# AI-driven-development-process

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  NOTICE.md  PACKAGE_CONTENTS.txt  README.md  UPLOAD_TO_GITHUB.md  UPSTREAM.md  VERIFICATION.md  index.html  pyproject.toml
